[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/pipe/pipe_green.png" type="Texture" id=1]
[ext_resource path="res://scripts/management/pipe.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.5, 79.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.5, 105.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 62 )

[node name="Pipe" type="Node2D"]
script = ExtResource( 2 )
walk_speed = 180
pipe_texture = [ "res://assets/pipe/pipe_green.png", "res://assets/pipe/pipe_red.png" ]

[node name="top_pipe" type="StaticBody2D" parent="."]
scale = Vector2( 1, -1 )

[node name="texture" type="Sprite" parent="top_pipe"]
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="top_pipe"]
position = Vector2( -0.5, -76.5 )
shape = SubResource( 3 )

[node name="bottom_pipe" type="StaticBody2D" parent="."]
position = Vector2( 0, 456 )

[node name="texture" type="Sprite" parent="bottom_pipe"]
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="bottom_pipe"]
position = Vector2( -0.5, -48.5 )
shape = SubResource( 4 )

[node name="notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, 237.5 )
scale = Vector2( 2.35, 23.95 )

[node name="score_area" type="Area2D" parent="."]
position = Vector2( -3, 0 )

[node name="collision" type="CollisionShape2D" parent="score_area"]
position = Vector2( 40, 229 )
shape = SubResource( 2 )

[connection signal="screen_exited" from="notifier" to="." method="_on_notifier_screen_exited"]
[connection signal="body_exited" from="score_area" to="." method="_on_score_area_body_exited"]
